--- a/race_registration.html
+++ b/race_registration.html
@@ -7,8 +7,15 @@
     <title>Race registration form</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="#about_us">About us</a>
+        <a href="#contact_us">Contact us</a>
+      </nav>
+    </header>
     <form action="/race/registration" method="GET">
       <h1>Race registration!</h1>
+      <img src="/images/bike_race.jpeg" alt="race_image" /><br /><br />
       <label for="fname">First Name</label>
       <input
         type="text"
