added application form and tribute html files

--- a/race_registration.html
+++ b/race_registration.html
@@ -56,6 +56,10 @@
         placeholder="password"
       />
       <div>
+        <label for="dob">Select your date of birth:</label>
+        <input type="date" name="dob" id="dob" />
+      </div>
+      <div>
         Select Age Group
         <select name="age_group" id="age_group">
           <option value="">--select age group--</option>
