added new stuff

--- a/application_form.html
+++ b/application_form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Application Form</title>
+    <link rel="stylesheet" href="app_form.css" />
   </head>
   <body>
     <form action="/java/rest/api" method="GET">
@@ -154,8 +155,8 @@
         Certifiates here:
       </label>
       <input type="file" name="file_attach" id="file_attach" /><br /><br />
-      <button type="submit">Send Your Application</button>
-      <button type="reset">Reset</button>
+      <button type="submit" id="submit_button">Send Your Application</button>
+      <button type="reset" id="reset_button">Reset</button>
     </form>
   </body>
 </html>
